--- a/new.html
+++ b/new.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>My Local Image</h2>
-    <img src="images/my_image.jpg" alt="My Image" width="400">
+    <img src="channel-1.jpeg" alt="My Image" width="400">
 </body>
 </html>
 
